src/objects/SWW_Compliance__c.object
<CustomObject>
    <description>Custom Object used to track product family compliance details for ILT Country records in support of the SellWhatWhere tool.</description>
    <fields>
        <fullName>Adjusted_ETA__c</fullName>
        <label>Adjusted ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_ETA__c</fullName>
        <label>ETA for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <label>Approval</label>
        <picklist>
            <picklistValues>
                <fullName>FCC/UL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC/cUL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTICK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC Exemption Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exemption Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANATEL Exemption Letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOA/COC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMARK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customs Union EAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GOST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Approval Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>SWW_Country__c</referenceTo>
        <relationshipLabel>SellWhatWhere Compliance</relationshipLabel>
        <relationshipName>Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>CS200/CS400/ES1/AFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS300/CS500/CS700</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SellWhatWhere Compliance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Product_Family__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>COMP-{000000}</displayFormat>
        <label>Compliance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SellWhatWhere Compliance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>